welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: type mismatch;
 found   : Int(21)
 required: Boolean
  if (9<a<21 || 9<b<21){return true}
          ^in1020:2: error: type mismatch;
 found   : Int(21)
 required: Boolean
  if (9<a<21 || 9<b<21){return true}
                    ^